--- a/index.html
+++ b/index.html
@@ -84,37 +84,37 @@
 <main>
     <section id="efficiency">
         <h2>1. Prós: Eficiência e Produtividade</h2>
-        <img src="https://cdn.pixabay.com/photo/2019/04/08/12/38/robot-4111582_1280.jpg" alt="Robô produtividade" />
+        <img src="https://images.openai.com/thumbnails/0bc8277b614fc064167b686225f56ee6.png" alt="Inteligência Artificial e Eficiência" />
         <p>A IA aumenta a eficiência nas empresas com automação de tarefas repetitivas, reduzindo custos e liberando funcionários para tarefas estratégicas.</p>
     </section>
 
     <section id="healthcare">
         <h2>2. Prós: Saúde e Medicina</h2>
-        <img src="https://cdn.pixabay.com/photo/2017/08/06/11/36/doctor-2596629_1280.jpg" alt="IA na medicina" />
+        <img src="https://images.openai.com/thumbnails/57824ad1398b87802db57dc9041bcedf.png" alt="IA na medicina" />
         <p>IA revoluciona a saúde em diagnósticos, cirurgias e desenvolvimento de medicamentos, analisando dados médicos e auxiliando decisões clínicas.</p>
     </section>
 
     <section id="education">
         <h2>3. Prós: Educação e Acessibilidade</h2>
-        <img src="https://cdn.pixabay.com/photo/2016/03/26/13/09/online-1282333_1280.jpg" alt="IA na educação" />
+        <img src="https://images.openai.com/thumbnails/4def78160842017b5801d0e0b69a1291.jpeg" alt="IA na educação" />
         <p>IA personaliza o aprendizado com plataformas adaptativas e auxilia na inclusão com assistentes e tradutores automáticos.</p>
     </section>
 
     <section id="jobloss">
         <h2>4. Contras: Perda de Empregos</h2>
-        <img src="https://cdn.pixabay.com/photo/2017/07/31/11/39/lost-place-2555813_1280.jpg" alt="Perda de empregos" />
+        <img src="https://images.openai.com/thumbnails/d337001e2d6868100d6b8d289d0eace7.jpeg" alt="Perda de empregos com IA" />
         <p>Com máquinas assumindo tarefas humanas, muitos empregos tradicionais estão em risco sem a requalificação da força de trabalho.</p>
     </section>
 
     <section id="ethics">
         <h2>5. Contras: Ética e Controle</h2>
-        <img src="https://cdn.pixabay.com/photo/2020/03/11/14/39/ai-4928396_1280.jpg" alt="Ética na IA" />
+        <img src="https://images.openai.com/thumbnails/d337001e2d6868100d6b8d289d0eace7.jpeg" alt="Ética na IA" />
         <p>Decisões sem supervisão humana podem gerar injustiças. Algoritmos devem ser auditados para evitar viés e abuso.</p>
     </section>
 
     <section id="privacy">
         <h2>6. Contras: Privacidade e Preconceito</h2>
-        <img src="https://cdn.pixabay.com/photo/2016/11/29/02/04/hacker-1863372_1280.jpg" alt="Privacidade e IA" />
+        <img src="https://images.openai.com/thumbnails/d337001e2d6868100d6b8d289d0eace7.jpeg" alt="Privacidade e IA" />
         <p>IA pode coletar e usar dados pessoais sem controle, além de reforçar preconceitos existentes nos dados.</p>
     </section>
 </main>
