--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Publicado via GitHub Pages -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -10,20 +9,20 @@
         body {
             margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #1e1e2f; /* Fundo escuro */
+            background: linear-gradient(135deg, #00d9ff, #1a73e8); /* Gradiente azul neon */
             color: #e0e0e0;
             line-height: 1.6;
             scroll-behavior: smooth;
         }
         header {
-            background: linear-gradient(90deg, #0f0f3e, #1a73e8);
+            background: rgba(15, 15, 62, 0.8); /* Fundo escuro com transparência */
             color: white;
             padding: 30px 0;
             text-align: center;
             box-shadow: 0 4px 10px rgba(0,0,0,0.5);
         }
         nav {
-            background: #121223;
+            background: rgba(18, 18, 35, 0.8); /* Fundo escuro com transparência */
             padding: 12px 0;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0,0,0,0.3);
@@ -51,7 +50,7 @@
         }
         .icon {
             font-size: 50px;
-            color: #1a73e8;
+            color: #ffcc00; /* Ícones amarelos */
             margin-bottom: 10px;
         }
         p {
@@ -61,10 +60,9 @@
             text-align: center;
             padding: 25px 0;
             margin-top: 30px;
-            background: #0f0f3e;
+            background: rgba(15, 15, 62, 0.8); /* Fundo escuro com transparência */
             color: #ccc;
         }
-        /* Estilo do botão "Voltar ao Topo" */
         .back-to-top {
             position: fixed;
             bottom: 30px;
@@ -102,32 +100,38 @@
 
     <section id="efficiency">
         <h2><i class="fas fa-cogs icon"></i> 1. Prós: Eficiência e Produtividade</h2>
-        <p>A IA aumenta a eficiência nas empresas com automação de tarefas repetitivas, reduzindo custos e liberando funcionários para tarefas estratégicas.</p>
+        <p>A IA aumenta a eficiência nas empresas com automação de tarefas repetitivas, reduzindo custos e liberando funcionários para tarefas estratégicas. Além disso, sistemas de IA podem analisar grandes volumes de dados em tempo real, permitindo decisões mais rápidas e informadas.</p>
+        <p>Exemplos incluem chatbots que atendem clientes 24/7 e algoritmos que otimizam processos de produção, resultando em maior produtividade e satisfação do cliente.</p>
     </section>
 
     <section id="healthcare">
         <h2><i class="fas fa-hospital icon"></i> 2. Prós: Saúde e Medicina</h2>
-        <p>IA revoluciona a saúde em diagnósticos, cirurgias e desenvolvimento de medicamentos, analisando dados médicos e auxiliando decisões clínicas.</p>
+        <p>A IA revoluciona a saúde em diagnósticos, cirurgias e desenvolvimento de medicamentos, analisando dados médicos e auxiliando decisões clínicas. Ferramentas de IA podem detectar doenças em estágios iniciais, muitas vezes com maior precisão do que médicos humanos.</p>
+        <p>Além disso, a IA pode personalizar tratamentos com base no histórico médico de cada paciente, melhorando os resultados e reduzindo custos com saúde.</p>
     </section>
 
     <section id="education">
         <h2><i class="fas fa-book icon"></i> 3. Prós: Educação e Acessibilidade</h2>
-        <p>IA personaliza o aprendizado com plataformas adaptativas e auxilia na inclusão com assistentes e tradutores automáticos.</p>
+        <p>A IA personaliza o aprendizado com plataformas adaptativas que se ajustam ao ritmo e estilo de aprendizado de cada aluno. Isso permite que estudantes de diferentes níveis de habilidade tenham acesso a um ensino mais eficaz.</p>
+        <p>Além disso, assistentes virtuais e tradutores automáticos ajudam na inclusão de alunos com necessidades especiais e na superação de barreiras linguísticas.</p>
     </section>
 
     <section id="jobloss">
         <h2><i class="fas fa-user-slash icon"></i> 4. Contras: Perda de Empregos</h2>
-        <p>Com máquinas assumindo tarefas humanas, muitos empregos tradicionais estão em risco sem a requalificação da força de trabalho.</p>
+        <p>Com máquinas assumindo tarefas humanas, muitos empregos tradicionais estão em risco sem a requalificação da força de trabalho. A automação pode levar à obsolescência de funções, especialmente em setores como manufatura e atendimento ao cliente.</p>
+        <p>É crucial que governos e empresas invistam em programas de requalificação para preparar os trabalhadores para novas oportunidades no mercado de trabalho.</p>
     </section>
 
     <section id="ethics">
         <h2><i class="fas fa-balance-scale icon"></i> 5. Contras: Ética e Controle</h2>
-        <p>Decisões sem supervisão humana podem gerar injustiças. Algoritmos devem ser auditados para evitar viés e abuso.</p>
+        <p>Decisões sem supervisão humana podem gerar injustiças. Algoritmos devem ser auditados para evitar viés e abuso. A falta de transparência em como as decisões são tomadas por sistemas de IA pode levar a discriminação e desigualdade.</p>
+        <p>É fundamental estabelecer diretrizes éticas e regulatórias para garantir que a IA seja usada de maneira justa e responsável.</p>
     </section>
 
     <section id="privacy">
         <h2><i class="fas fa-lock icon"></i> 6. Contras: Privacidade e Preconceito</h2>
-        <p>IA pode coletar e usar dados pessoais sem controle, além de reforçar preconceitos existentes nos dados.</p>
+        <p>A IA pode coletar e usar dados pessoais sem controle, além de reforçar preconceitos existentes nos dados. A vigilância em massa e a coleta de dados sem consentimento são preocupações crescentes na era digital.</p>
+        <p>Proteger a privacidade dos indivíduos e garantir que os dados sejam usados de maneira ética é um desafio que deve ser enfrentado por desenvolvedores e legisladores.</p>
     </section>
 </main>
 
